octsympy 2.x.y (yyyy-mm-dd)
===========================

  * New commands:

          columns
          degree
          ismatrix
          numden
          rows

  * Additional ways of calling symsum, symprod, and subs for better
    compatibility with other symbolic toolboxes.

  * Bug fixes in poly2sym, sym2poly, symfun (thanks @rocketsound),
    prod, horner, coeffs.

  * Documentation improvements.

  * Drop python_cmd_string, which has been deprecated since v0.1.1.



octsympy 2.0.0 (2015-02-04)
===========================

 *  Octsympy is now the "symbolic" package for Octave Forge.  There
    was a previous "symbolic" package (based on GiNaC) which reached
    version 1.1.0.  To prevent confusion, we are now at version 2.0.0.
    Additionally, the history of the two projects has been merged
    (thanks Carnë Draug).

 *  New commands:

          coeffs
          ipermute
          isallconstant
          isconstant
          nchoosek
          permute

 *  Fixes for developement version of SymPy.

 *  Fixes for vpa and vpasolve: high precision should be more reliable.

 *  Improve handling `sym(pi/3)` and other small fractions of pi.  It
    works but you'll still get a warning and 2*sym(pi)/3 is really the
    preferred approach!  `sym(-pi)` now works.

 *  On Windows, default to ascii rendering for now (until unicode
    is fixed in Octave on that platform).

 *  No longer needs to autogenerate a bunch of functions at install
    time: hopefully making it easier than ever to get involved!



octsympy 0.1.3 (2015-01-06)
===========================

 *  New commands:

          argnames           partfrac
          digits             orth
          ilaplace           rank
          laplace            rref
          ldivide            sum
          mldivide           vpa
          null	             vpasolve

 *  Symbolic backslash support.

 *  variable-precision arithmetic support: see vpa, digits, vpasolve.
